--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
           <ul class="header-list list">
             <li class="header-item"><a href="./index.html" class="header-link link">Studio</a></li>
             <li class="header-item">
-              <a href="./portfolio.html" class="header-link link">Portfolio</a>
+              <a href="./portfolio.html" class="header-link link active">Portfolio</a>
             </li>
             <li class="header-item"><a href="" class="header-link link">Contacts</a></li>
           </ul>
@@ -70,12 +70,18 @@
           <ul class="project-list list">
             <li class="projects-items">
               <a class="project-shadow link" href="">
-                <img
-                  src="./images/bank-app-inter.jpg"
-                  alt="Bank app interface"
-                  width="360"
-                  height="300"
-                />
+                <div class="projects-top-wrap">
+                  <img
+                    src="./images/bank-app-inter.jpg"
+                    alt="Bank app interface"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="project-overlay-paragraph">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="img-padding">
                   <h2 class="project-title">Banking App Interface Concept</h2>
                   <p class="project-paragraph">App</p>
@@ -84,12 +90,18 @@
             </li>
             <li class="projects-items">
               <a class="project-shadow link" href="">
-                <img
-                  src="./images/cashless-payment.jpg"
-                  alt="Cashless payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="projects-top-wrap">
+                  <img
+                    src="./images/cashless-payment.jpg"
+                    alt="Cashless payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="project-overlay-paragraph">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="img-padding">
                   <h2 class="project-title">Cashless Payment</h2>
                   <p class="project-paragraph">Marketing</p>
@@ -98,12 +110,18 @@
             </li>
             <li class="projects-items">
               <a class="project-shadow link" href="">
-                <img
-                  src="./images/meditation-app.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <div class="projects-top-wrap">
+                  <img
+                    src="./images/meditation-app.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="project-overlay-paragraph">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="img-padding">
                   <h2 class="project-title">Meditaion App</h2>
                   <p class="project-paragraph">App</p>
@@ -112,7 +130,13 @@
             </li>
             <li class="projects-items">
               <a class="project-shadow link" href="">
-                <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" />
+                <div class="projects-top-wrap">
+                  <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300" />
+                  <p class="project-overlay-paragraph">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="img-padding">
                   <h2 class="project-title">Taxi Service</h2>
                   <p class="project-paragraph">Marketing</p>
@@ -121,12 +145,18 @@
             </li>
             <li class="projects-items">
               <a class="project-shadow link" href="">
-                <img
-                  src="./images/screen-illu.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="projects-top-wrap">
+                  <img
+                    src="./images/screen-illu.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="project-overlay-paragraph">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="img-padding">
                   <h2 class="project-title">Screen Illustrations</h2>
                   <p class="project-paragraph">Design</p>
@@ -135,12 +165,18 @@
             </li>
             <li class="projects-items">
               <a class="project-shadow link" href="">
-                <img
-                  src="./images/online-courses.jpg"
-                  alt="online Courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="projects-top-wrap">
+                  <img
+                    src="./images/online-courses.jpg"
+                    alt="online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="project-overlay-paragraph">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="img-padding">
                   <h2 class="project-title">Online Courses</h2>
                   <p class="project-paragraph">Marketing</p>
@@ -149,12 +185,18 @@
             </li>
             <li class="projects-items">
               <a class="project-shadow link" href="">
-                <img
-                  src="./images/inst-stories.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="projects-top-wrap">
+                  <img
+                    src="./images/inst-stories.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="project-overlay-paragraph">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="img-padding">
                   <h2 class="project-title">Instagram Stories Concept</h2>
                   <p class="project-paragraph">Design</p>
@@ -163,7 +205,13 @@
             </li>
             <li class="projects-items">
               <a class="project-shadow link" href="">
-                <img src="./images/org-food.jpg" alt="Organic Food" width="360" height="300" />
+                <div class="projects-top-wrap">
+                  <img src="./images/org-food.jpg" alt="Organic Food" width="360" height="300" />
+                  <p class="project-overlay-paragraph">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="img-padding">
                   <h2 class="project-title">Organic Food</h2>
                   <p class="project-paragraph">Web Site</p>
@@ -172,7 +220,13 @@
             </li>
             <li class="projects-items">
               <a class="project-shadow link" href="">
-                <img src="./images/coffee.jpg" alt="Fresh Coffee" width="360" height="300" />
+                <div class="projects-top-wrap">
+                  <img src="./images/coffee.jpg" alt="Fresh Coffee" width="360" height="300" />
+                  <p class="project-overlay-paragraph">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="img-padding">
                   <h2 class="project-title">Fresh Coffee</h2>
                   <p class="project-paragraph">Web Site</p>
