--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" data-modal-close class="modal-close" width="24px" height="24px">
+        <button type="button" data-modal-close class="modal-close">
           <svg class="customers-social-icon" width="8px" height="8px">
             <use href="images/symbol-cust.svg#icon-close-black"></use>
           </svg>
